<resources>
    <string name="app_name">ShiftManagment</string>
    <string name="log_out">Log out</string>
    <string name="manage_employees">Manage employees</string>
    <string name="manage_shifts">Manage shifts</string>
    <string name="my_shifts">Place shifts</string>
    <string name="my_salary">My salary</string>
    <string name="enter_your_mail">Enter your mail</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="registration">Registration</string>
    <string name="salary_for_hour">Salary for hour</string>
    <string name="Enter_employee_password">Enter employee password</string>
    <string name="Enter_employee_mail">Enter employee email</string>
    <string name="is_admin">Is admin</string>
    <string name="back">Back ></string>
    <string name="enter_employee_first_name">Enter employee first name</string>
    <string name="enter_employee_last_name">Enter employee last name</string>
    <string name="add_new_employee">Add new employee</string>
    <string name="create_a_new_employee">Create a new employee</string>
    <string name="shifts_published_title">The shifts already published</string>
    <string name="shifts_published_instructions">You can request shifts only before the manager is publish the shifts.</string>
    <string name="confirm_button">ok</string>
    <string name="shifts_published_success">Shifts published successfully</string>
    <string name="shift_publish_succsses_info">Now the employees can not send request for shifts until you allow it.</string>
    <string name="requests_shifts_allowed">The request shifts are allowed</string>
    <string name="request_shifts_info">Now the employees can send requests for new shifts.</string>
    <string name="shifts_send_confirmation">Shifts has been sent</string>
    <string name="shifts_send_confirmation_info">Your shifts has been sent to manager for approval.</string>
    <string name="alert_permission_dialog_title">Prmission is required</string>
    <string name="alert_permission_dialog_context">You must get a permission to add the shifts to your diary.</string>
    <string name="no_button">No, thanks</string>
    <string name="sucess_inserted_calendar_title">The operation succeed</string>
    <string name="sucess_inserted_calendar_context">Your shifts has been added to the google calendar.</string>
    <string name="salary_per_hour">per hour</string>
</resources>
