<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/new_employee_layout"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="2">


        <Button
            android:id="@+id/back_add_employee_Btn"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="right"
            android:background="@android:color/transparent"
            android:text="@string/back"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="15dp"/>

        <EditText
            android:id="@+id/employee_first_name_Et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_employee_first_name"
            android:maxLines="1"
            android:paddingStart="5dp"
            android:singleLine="true"
            android:textSize="25dp"
            android:layout_margin="15dp"/>

        <EditText
            android:id="@+id/employee_last_name_Et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_employee_last_name"
            android:maxLines="1"
            android:paddingStart="5dp"
            android:singleLine="true"
            android:textSize="25dp"
            android:layout_margin="15dp"/>

        <EditText
            android:id="@+id/employee_mail_Et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/Enter_employee_mail"
            android:maxLines="1"
            android:paddingStart="5dp"
            android:singleLine="true"
            android:textSize="25dp"
            android:layout_margin="15dp"/>

        <EditText
            android:id="@+id/employee_password_Et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/Enter_employee_password"
            android:maxLines="1"
            android:paddingStart="5dp"
            android:singleLine="true"
            android:textSize="25dp"
            android:layout_margin="15dp"/>

        <EditText
            android:id="@+id/salary_per_hour_employee_Et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="salary per hour"
            android:maxLines="1"
            android:paddingStart="5dp"
            android:singleLine="true"
            android:textSize="25dp"
            android:layout_margin="15dp"/>

        <CheckBox
            android:id="@+id/isAdmin_Cb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/is_admin"
            android:textSize="20dp"
            android:layout_margin="20dp"/>

        <Button
            android:id="@+id/add_new_employee_Btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/add_new_employee"
            android:textAllCaps="false"
            android:textSize="30dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

    </LinearLayout>




</LinearLayout>