<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AdminPageView"
    android:orientation="vertical"
    android:gravity="center"
>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:layout_weight="2"
        android:background="@drawable/new_back">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:background="@drawable/hmnnew" />

        <Button
            android:id="@+id/logOutEmployeeBtn"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_gravity="right"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:text="@string/log_out"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="20dp" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/small_cicle"
            android:layout_marginStart="320dp"/>

        <Button
            android:id="@+id/myShiftsBtn"
            android:text="@string/my_shifts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@android:color/black"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:layout_margin="40dp"
            android:background="@drawable/blue_button"/>
        <TextView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginBottom="7.3dp"
            android:background="@drawable/small_cicle"
            android:layout_marginStart="130dp"/>

        <Button
            android:id="@+id/mySalaryBtn"
            android:text="@string/my_salary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:layout_margin="40dp"
            android:background="@drawable/blue_button" />
        <TextView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginBottom="7.3dp"
            android:background="@drawable/small_cicle"
            android:layout_marginStart="240dp"/>
        <TextView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginRight="80dp"
        android:layout_marginBottom="7.3dp"
        android:background="@drawable/small_cicle"
            android:layout_marginStart="50dp"/>
         <TextView
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginBottom="7.3dp"
        android:background="@drawable/small_cicle"
             android:layout_marginStart="170dp"/>
</LinearLayout>
